# birdievo

./: .gitignore  CNAME  Cargo.toml  README.md  bundle.js  package.json  pnpm-lock.yaml  utils.js  webpack.config.js
.github/workflows/: cd.yaml  ci.yaml
frontend/: bundle.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  utils.js  vite.config.ts  webpack.config.js
frontend/simulation-wasm/: Cargo.toml
frontend/simulation-wasm/src/: lib.rs
frontend/src/: App.svelte
libs/genetic-algorithm/: Cargo.toml
libs/genetic-algorithm/src/: lib.rs
libs/neural-network/: Cargo.toml
libs/neural-network/src/: lib.rs  utils.rs
libs/simulation/: Cargo.toml
libs/simulation-wasm/: Cargo.toml
libs/simulation-wasm/src/: lib.rs
libs/simulation/src/: animal.rs  animal_agent.rs  brain.rs  eye.rs  food.rs  lib.rs  world.rs
src/: package.json
