[package]
name = "simulation-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
glam = { workspace = true }
getrandom = { version = "0.2", features = ["js"] }
lib-simulation = { path = "../../libs/simulation" }
rand = { workspace = true }
wasm-bindgen = "0.2.100"
